# fraktal_kundschafter

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.fox  build.ninja  calculation_handler.cpp  calculation_handler.hpp  colors.hpp  display.cpp  display.hpp  fractal_functions.hpp  fractal_worker.cpp  fractal_worker.hpp  fraktal_kundschafter  iterations.hpp  main.cpp  options_panel.cpp  options_panel.hpp  range-panel.cpp  range-panel.hpp  result_store.cpp  result_store.hpp  todo  types.hpp  workload_distributor.hpp
src/: CMakeLists.txt  calculation_handler.cpp  calculation_handler.hpp  colors.hpp  conversions.cpp  conversions.hpp  display.cpp  display.hpp  fractal_functions.hpp  fractal_worker.cpp  fractal_worker.hpp  functions_panel.cpp  functions_panel.hpp  info_panel.cpp  info_panel.hpp  iterations.hpp  main.cpp  main_window.cpp  main_window.hpp  mediant.cpp  mediant.hpp  options_panel.cpp  options_panel.hpp  parameters_panel.cpp  parameters_panel.hpp  random_panel.cpp  random_panel.hpp  range-panel.cpp  range-panel.hpp  result_store.cpp  result_store.hpp  time.cpp  time.hpp  types.hpp  workload_distributor.cpp
